[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-agent-ai"
version = "0.1.0"
description = "Auto-generate and keep API documentation in sync with Python source code using Claude."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["documentation", "ai", "anthropic", "claude", "api-docs"]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
doc-agent = "doc_agent.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["doc_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
